<resources>
    <string name="app_name">Дудник Александр</string>
    <string name="text_rating">Рейтинг</string>
    <string name="text_code_lines">Написано строк кода</string>
    <string name="text_projects">Проектов</string>
    <string name="text_phone">Мобильный телефон</string>
    <string name="text_email">E-Mail</string>
    <string name="text_vk_profile">Профиль в VK</string>
    <string name="text_git_profile">Репозиторий</string>
    <string name="text_about">О себе</string>
    <string name="my_profile">Мой профиль</string>
    <string name="colaborators">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.photo">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose_image.title">Выберите фото для профиля</string>
    <string name="permission_denied.camera">Работа с камерой не разрешена!</string>
    <string name="permission_denied.storage">Запись фото на внешннбб память не разрешена!</string>
    <string name="permission_request_snackbar">Для корректной работы необходимо дать приложению требуемые разрешения!</string>
    <string name="permission_allow_snackbar">Разрешить</string>
    <string name="message_empty_phone_number">Передан пустой номер телефона!</string>
    <string name="message_empty_email">Передан пустой e-mail!</string>
    <string name="message_send_email_chooser">Отправить письмо…</string>
    <string name="message_empty_link">Открываемая ссылка пуста!</string>
    <string name="message_browser_chooser">Открыть в браузере…</string>
    <string name="message_error_phone.length">Не корректная длинна телефонного номера! Должна быть 11–20 символов</string>
    <string name="message_error_phone.format">Введенная последовательность не похожа на телефонный номер</string>
    <string name="message_error_email_format">Неверный формат Email</string>
    <string name="message_error_url_vk_format">Не верный URL адрес VK сайта!</string>
    <string name="message_error_url_git_format">Не верный URL адрес GIT сайта!</string>
    <string name="sign_in">Войти</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="text_password">Пароль</string>
    <string name="message_error_creating_file">Ошибка создания временного файла для сохранения фото!</string>
    <string name="view_details_txt">Просмотр</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="unexpected_error">"Что-то пошло не так.... Код: "</string>
    <string name="user_search_text">Поиск пользователя</string>
    <string name="search_user_query_text">Введите имя пользователя</string>
    <string name="dev_intensive_2016">Dev-Intensive 2016</string>

</resources>
