<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.AuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/login_screen"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/login_block_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="2dp"
            app:cardElevation="@dimen/spacing_small_8"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:layout_marginTop="@dimen/spacing_medium_32"

                    >

                    <View
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent"/>

                    <TextView
                        style="@style/login_header"
                        android:text="@string/sign_in"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/login_inside_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <EditText
                            android:id="@+id/login_et"
                            style="@style/login_field"
                            android:hint="@string/text_email"
                            android:inputType="textEmailAddress"
                            android:text=""
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <EditText
                            android:id="@+id/password_et"
                            style="@style/login_field"
                            android:hint="@string/text_password"
                            android:inputType="textPassword"
                            android:text=""
                            />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_btn"
                        style="@style/AppTheme.Button.Red"
                        android:text="@string/sign_in"
                        android:theme="@style/AppTheme.Button.Red"
                        />

                    <TextView
                        android:id="@+id/forgot_pass_btn"
                        style="@style/login_button"
                        android:text="@string/text_forgot_password"
                        />
                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>