<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppbarOverlay"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    style="@style/user_photo_image"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:titleTextColor="@color/color_white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

            //-------------------Summary---------------------

            <View
                android:id="@+id/summary_pad_top"
                style="@style/summary_pad"/>

            <LinearLayout style="@style/summary">

                <LinearLayout style="@style/summary_block.left">

                    <TextView
                        android:id="@+id/rating_et"
                        style="@style/summary_edit_text"
                        android:text="5"
                        />

                    <TextView
                        style="@style/summary_description"
                        android:text="@string/text_rating"
                        />

                </LinearLayout>

                <View style="@style/summary_divider"/>

                <LinearLayout style="@style/summary_block.center">

                    <TextView
                        android:id="@+id/code_lines_et"
                        style="@style/summary_edit_text"
                        android:text="5"
                        />

                    <TextView
                        style="@style/summary_description"
                        android:text="@string/text_code_lines"
                        />
                </LinearLayout>

                <View style="@style/summary_divider"/>

                <LinearLayout style="@style/summary_block.right">

                    <TextView
                        android:id="@+id/projects_et"
                        style="@style/summary_edit_text"
                        android:text="5"
                        />

                    <TextView
                        style="@style/summary_description"
                        android:text="@string/text_projects"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/summary_pad_bottom"
                style="@style/summary_pad"/>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"

                    >


                    //-------------------Phone-----------------------

                    <LinearLayout style="@style/list_item">

                        <ImageView
                            style="@style/icon.left"
                            android:src="@drawable/ic_phone_black_24dp"/>

                        <LinearLayout style="@style/list_item_information">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <EditText
                                    android:id="@+id/phone_et"
                                    style="@style/list_item_edit_text"
                                    android:hint="@string/text_phone"
                                    android:inputType="phone"
                                    android:text="+38(050)907-48-18"
                                    />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <ImageView
                            style="@style/icon.right"
                            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
                    </LinearLayout>

                    <View style="@style/list_item_divider"/>


                    //--------------------Email----------------------

                    <LinearLayout style="@style/list_item">


                        <ImageView
                            style="@style/icon.left"
                            android:src="@drawable/ic_mail_black_24dp"/>

                        <LinearLayout style="@style/list_item_information">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <EditText
                                    android:id="@+id/email_et"
                                    style="@style/list_item_edit_text"
                                    android:hint="@string/text_email"
                                    android:inputType="textEmailAddress"
                                    android:text="dudnik2104@gmail.com"
                                    />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <ImageView
                            style="@style/icon.right"
                            android:src="@drawable/ic_send_black_24dp"/>
                    </LinearLayout>

                    <View style="@style/list_item_divider"/>

                    //--------------------VK----------------------

                    <LinearLayout style="@style/list_item">


                        <ImageView
                            style="@style/icon.left"
                            android:src="@drawable/ic_social_vk_black_24dp"/>

                        <LinearLayout style="@style/list_item_information">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <EditText
                                    android:id="@+id/vk_et"
                                    style="@style/list_item_edit_text"
                                    android:hint="@string/text_vk_profile"
                                    android:inputType="textUri"
                                    android:text="vk.com/sanches_da"
                                    />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <ImageView
                            style="@style/icon.right"
                            android:src="@drawable/ic_visibility_black_24dp"/>
                    </LinearLayout>

                    <View style="@style/list_item_divider"/>


                    //--------------------Git----------------------

                    <LinearLayout style="@style/list_item">


                        <ImageView
                            style="@style/icon.left"
                            android:src="@drawable/ic_social_github_black_24dp"/>

                        <LinearLayout style="@style/list_item_information">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <EditText
                                    android:id="@+id/git_1_et"
                                    style="@style/list_item_edit_text"
                                    android:hint="@string/text_git_profile"
                                    android:inputType="textUri"
                                    android:text="github.com/Sanches-da/DevIntensive"
                                    />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <ImageView
                            style="@style/icon.right"
                            android:src="@drawable/ic_visibility_black_24dp"/>
                    </LinearLayout>

                    <View style="@style/list_item_divider"/>


                    //--------------------About----------------------

                    <LinearLayout style="@style/list_item">


                        <ImageView
                            style="@style/icon.left"
                            android:src="@drawable/ic_account_circle_black_24dp"/>

                        <LinearLayout
                            style="@style/list_item_information"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <EditText
                                    android:id="@+id/about_et"
                                    style="@style/list_item_edit_text"
                                    android:hint="@string/text_about"
                                    android:inputType="textMultiLine"
                                    android:text="Программист 1С, решил развиваться в сторону новых технологий. Изучаю Java и воспользовался возможностью изучить разработку под OS Android"
                                    />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <View style="@style/list_item_divider"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_right_space"
            android:src="@drawable/ic_mode_edit_black_24dp"
            app:layout_anchor="@id/user_photo_img"
            app:layout_anchorGravity="bottom|right"
            />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">


    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>